add entity targetting